--- a/New folder (2)/index.html
+++ b/New folder (2)/index.html
@@ -21,8 +21,8 @@
             <a href="index.html">home</a>
             <a href="mentors.html">Mentors</a>
             <a href="news.html">News/blogs</a>
-            <<<<<<< HEAD <a href="career.html">Career</a> ======= >>>>>>> 9514b115be28a9f643abe8e2241a688a48539df8 <a
-                    href="contact.html">contact</a>
+            <a href="career.html">Career</a>
+            <a href="contact.html">contact</a>
         </nav>
         <div class="icons">
             <div id="account-btn" class="fas fa-user"></div>
