--- a/New folder (2)/news.html
+++ b/New folder (2)/news.html
@@ -67,52 +67,49 @@
                     <div class="section-body">
                         <div class="row">
                             <div class="col-md-7 mb-4">
-                                <a href="single.html">
+                                <a href="#">
                                     <img class="thumb" src="assets/imgs/JEE.avif">
                                 </a>
                                 <div class="main-title">
-                                    <a href="single.html"> <b>JEE Mains 2023 Result Declared.</b></a>
+                                    <a href="#"> <b>JEE Mains 2023 Result Declared.</b></a>
                                 </div>
                             </div>
                             <div class="col-md-5">
                                 <div class="row">
                                     <div class="col-md-5 mb-4">
-                                        <a href="single.html">
-                                            <img class="thumb" src="assets/imgs/2.jpeg">
+                                        <a href="#">
+                                            <img class="thumb" src="assets/imgs/education-news.png">
                                         </a>
                                     </div>
                                     <div class="col-md-7 mb-4">
                                         <div class="list-title">
-                                            <a href="single.html"> Lorem ipsum dolor sit amet consectetur adipiscing
-                                            </a>
+                                            <a href="#"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
                                         </div>
                                     </div>
                                 </div>
                                 <hr>
                                 <div class="row">
                                     <div class="col-md-5 mb-4">
-                                        <a href="single.html">
-                                            <img class="thumb" src="assets/imgs/3.jpeg">
+                                        <a href="#">
+                                            <img class="thumb" src="assets/imgs/education-news.png">
                                         </a>
                                     </div>
                                     <div class="col-md-7 mb-4">
                                         <div class="list-title">
-                                            <a href="single.html"> Lorem ipsum dolor sit amet consectetur adipiscing1
-                                            </a>
+                                            <a href="#"> Lorem ipsum dolor sit amet consectetur adipiscing1 </a>
                                         </div>
                                     </div>
                                 </div>
                                 <hr>
                                 <div class="row">
                                     <div class="col-md-5 mb-4">
-                                        <a href="single.html">
-                                            <img class="thumb" src="assets/imgs/4.jpeg">
+                                        <a href="#">
+                                            <img class="thumb" src="assets/imgs/education-news.png">
                                         </a>
                                     </div>
                                     <div class="col-md-7 mb-4">
                                         <div class="list-title">
-                                            <a href="single.html"> Lorem ipsum dolor sit amet consectetur adipiscing1
-                                            </a>
+                                            <a href="#"> Lorem ipsum dolor sit amet consectetur adipiscing1 </a>
                                         </div>
                                     </div>
                                 </div>
@@ -128,22 +125,22 @@
                     </h2>
                     <div class="section-body latest-list">
                         <div class="list-title">
-                            <a href="single.html"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
+                            <a href="#"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
                         </div>
                         <div class="list-title">
-                            <a href="single.html"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
+                            <a href="#"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
                         </div>
                         <div class="list-title">
-                            <a href="single.html"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
+                            <a href="#"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
                         </div>
                         <div class="list-title">
-                            <a href="single.html"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
+                            <a href="#"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
                         </div>
                         <div class="list-title">
-                            <a href="single.html"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
+                            <a href="#"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
                         </div>
                         <div class="list-title">
-                            <a href="single.html"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
+                            <a href="#"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
                         </div>
                     </div>
                 </div>
@@ -154,11 +151,11 @@
             <div class="col-md-4">
                 <div class="section cat-section">
                     <div class="section-title">
-                        <span>Tourism</span>
+                        <span>Local</span>
                     </div>
                     <div class="section-body">
                         <a href="single.html">
-                            <img class="thumb" style="border-radius:0;" src="assets/imgs/6.jpeg">
+                            <img class="thumb" style="border-radius:0;" src="assets/imgs/edu-news.png">
                         </a>
                         <div class="list-title">
                             <strong>
@@ -183,11 +180,11 @@
             <div class="col-md-4">
                 <div class="section cat-section">
                     <div class="section-title">
-                        <span>Culture</span>
+                        <span>National</span>
                     </div>
                     <div class="section-body">
                         <a href="single.html">
-                            <img class="thumb" style="border-radius:0;" src="assets/imgs/7.jpeg">
+                            <img class="thumb" style="border-radius:0;" src="assets/imgs/edu-news-local.png">
                         </a>
                         <div class="list-title">
                             <strong>
@@ -212,11 +209,11 @@
             <div class="col-md-4">
                 <div class="section cat-section">
                     <div class="section-title">
-                        <span>Technology</span>
+                        <span>CBSE Updates</span>
                     </div>
                     <div class="section-body">
                         <a href="single.html">
-                            <img class="thumb" style="border-radius:0;" src="assets/imgs/8.jpeg">
+                            <img class="thumb" style="border-radius:0;" src="assets/imgs/edu-news-cbse.png">
                         </a>
                         <div class="list-title">
                             <strong>
@@ -249,13 +246,13 @@
                     <div class="section-body" style="padding-bottom: 20px;">
                         <div class="row">
                             <div class="col-md-4">
-                                <a href="single.html">
-                                    <img class="thumb" src="assets/imgs/9.jpeg">
+                                <a href="#">
+                                    <img class="thumb" src="assets/imgs/latest-edu-news.png">
                                 </a>
                             </div>
                             <div class="col-md-8">
                                 <h4 class="bold">
-                                    <a href="single.html"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
+                                    <a href="#"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
                                 </h4>
                                 <p class="summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                                     eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -266,13 +263,13 @@
                         <hr>
                         <div class="row">
                             <div class="col-md-4">
-                                <a href="single.html">
-                                    <img class="thumb" src="assets/imgs/10.jpeg">
+                                <a href="#">
+                                    <img class="thumb" src="assets/imgs/latest-edu-news2.png">
                                 </a>
                             </div>
                             <div class="col-md-8">
                                 <h4 class="bold">
-                                    <a href="single.html"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
+                                    <a href="#"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
                                 </h4>
                                 <p class="summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                                     eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -283,13 +280,13 @@
                         <hr>
                         <div class="row">
                             <div class="col-md-4">
-                                <a href="single.html">
-                                    <img class="thumb" src="assets/imgs/11.jpeg">
+                                <a href="#">
+                                    <img class="thumb" src="assets/imgs/latest-edu-news3.png">
                                 </a>
                             </div>
                             <div class="col-md-8">
                                 <h4 class="bold">
-                                    <a href="single.html"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
+                                    <a href="#"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
                                 </h4>
                                 <p class="summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                                     eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -300,13 +297,13 @@
                         <hr>
                         <div class="row">
                             <div class="col-md-4">
-                                <a href="single.html">
-                                    <img class="thumb" src="assets/imgs/12.jpeg">
+                                <a href="#">
+                                    <img class="thumb" src="assets/imgs/latest-edu-news4.png">
                                 </a>
                             </div>
                             <div class="col-md-8">
                                 <h4 class="bold">
-                                    <a href="single.html"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
+                                    <a href="#"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
                                 </h4>
                                 <p class="summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                                     eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -317,13 +314,13 @@
                         <hr>
                         <div class="row">
                             <div class="col-md-4">
-                                <a href="single.html">
-                                    <img class="thumb" src="assets/imgs/12.jpeg">
+                                <a href="#">
+                                    <img class="thumb" src="assets/imgs/latest-edu-news.png">
                                 </a>
                             </div>
                             <div class="col-md-8">
                                 <h4 class="bold">
-                                    <a href="single.html"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
+                                    <a href="#"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
                                 </h4>
                                 <p class="summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                                     eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -342,65 +339,65 @@
                     <div class="section-body">
                         <div class="row">
                             <div class="col-md-5">
-                                <a href="single.html">
-                                    <img src="assets/imgs/10.jpeg" class="thumb">
+                                <a href="#">
+                                    <img src="assets/imgs/latest-edu-news2.png" class="thumb">
                                 </a>
                             </div>
                             <div class="col-md-7">
                                 <span class="related-title">
-                                    <a href="single.html"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
+                                    <a href="#"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
                                 </span>
                             </div>
                         </div>
                         <hr>
                         <div class="row">
                             <div class="col-md-5">
-                                <a href="single.html">
-                                    <img src="assets/imgs/11.jpeg" class="thumb">
+                                <a href="#">
+                                    <img src="assets/imgs/latest-edu-news3.png" class="thumb">
                                 </a>
                             </div>
                             <div class="col-md-7">
                                 <span class="related-title">
-                                    <a href="single.html"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
+                                    <a href="#"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
                                 </span>
                             </div>
                         </div>
                         <hr>
                         <div class="row">
                             <div class="col-md-5">
-                                <a href="single.html">
-                                    <img src="assets/imgs/1.jpeg" class="thumb">
+                                <a href="#">
+                                    <img src="assets/imgs/latest-edu-news4.png" class="thumb">
                                 </a>
                             </div>
                             <div class="col-md-7">
                                 <span class="related-title">
-                                    <a href="single.html"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
+                                    <a href="#"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
                                 </span>
                             </div>
                         </div>
                         <hr>
                         <div class="row">
                             <div class="col-md-5">
-                                <a href="single.html">
-                                    <img src="assets/imgs/4.jpeg" class="thumb">
+                                <a href="#">
+                                    <img src="assets/imgs/latest-edu-news.png" class="thumb">
                                 </a>
                             </div>
                             <div class="col-md-7">
                                 <span class="related-title">
-                                    <a href="single.html"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
+                                    <a href="#"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
                                 </span>
                             </div>
                         </div>
                         <hr>
                         <div class="row">
                             <div class="col-md-5">
-                                <a href="single.html">
-                                    <img src="assets/imgs/7.jpeg" class="thumb">
+                                <a href="#">
+                                    <img src="assets/imgs/latest-edu-news2.png" class="thumb">
                                 </a>
                             </div>
                             <div class="col-md-7">
                                 <span class="related-title">
-                                    <a href="single.html"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
+                                    <a href="#"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
                                 </span>
                             </div>
                         </div>
