Updated News Page

--- a/New folder (2)/news.html
+++ b/New folder (2)/news.html
@@ -83,7 +83,7 @@
                                     </div>
                                     <div class="col-md-7 mb-4">
                                         <div class="list-title">
-                                            <a href="#"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
+                                            <a href="#"> Global Education Expo on 18th Feb in Hydrabad. </a>
                                         </div>
                                     </div>
                                 </div>
@@ -96,7 +96,7 @@
                                     </div>
                                     <div class="col-md-7 mb-4">
                                         <div class="list-title">
-                                            <a href="#"> Lorem ipsum dolor sit amet consectetur adipiscing1 </a>
+                                            <a href="#"> Global Education Expo on 19th Feb in Banglore. </a>
                                         </div>
                                     </div>
                                 </div>
@@ -109,7 +109,7 @@
                                     </div>
                                     <div class="col-md-7 mb-4">
                                         <div class="list-title">
-                                            <a href="#"> Lorem ipsum dolor sit amet consectetur adipiscing1 </a>
+                                            <a href="#"> Global Education Expo on 25th Feb in Delhi. </a>
                                         </div>
                                     </div>
                                 </div>
@@ -121,17 +121,17 @@
             <div class="col-md-3">
                 <div class="section list-section">
                     <h2 class="section-title">
-                        <span>Latest</span>
+                        <span>Upcoming Sports Events</span>
                     </h2>
                     <div class="section-body latest-list">
                         <div class="list-title">
-                            <a href="#"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
+                            <a href="#"> Khelo India Youth Games</a>
                         </div>
                         <div class="list-title">
-                            <a href="#"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
+                            <a href="#"> Ranji Trophy elimination round </a>
                         </div>
                         <div class="list-title">
-                            <a href="#"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
+                            <a href="#"> Junior WOMENS INTER ZONAL ONE DAY </a>
                         </div>
                         <div class="list-title">
                             <a href="#"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
@@ -188,7 +188,7 @@
                         </a>
                         <div class="list-title">
                             <strong>
-                                <a href="single.html"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
+                                <a href="single.html"> IIT Bombay Placement: These 2 sectors are major recuiters at IIT Bombay. </a>
                             </strong>
                         </div>
                         <div class="list-title">
@@ -217,7 +217,7 @@
                         </a>
                         <div class="list-title">
                             <strong>
-                                <a href="single.html"> Lorem ipsum dolor sit amet consectetur adipiscing </a>
+                                <a href="single.html"> CBSE 12th Final Examination Admit Card Released. </a>
                             </strong>
                         </div>
                         <div class="list-title">
