career page and database

--- a/New folder (2)/science.html
+++ b/New folder (2)/science.html
@@ -73,7 +73,7 @@
                     <div class="content">
                         <h3>PHYSICS, CHEMISTRY AND MATHS</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
-                        <a href="#" class="btn">click here</a>
+                        <a href="pcm.html" class="btn">click here</a>
                     </div>
                 </div>
                 <div class="box">
@@ -84,7 +84,7 @@
                     <div class="content">
                         <h3>PHYSICS, CHEMISTRY AND BIOLOGY</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
-                        <a href="#" class="btn">click here</a>
+                        <a href="pcb.html" class="btn">click here</a>
                     </div>
                 </div>
                 <div class="box">
@@ -95,7 +95,7 @@
                     <div class="content">
                         <h3>PHYSICS, CHEMISTRY, MATHS AND BIOLOGY</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
-                        <a href="#" class="btn">click here</a>
+                        <a href="pcmb.html" class="btn">click here</a>
                     </div>
                 </div>
             </div>
