--- a/New folder (2)/commerce.html
+++ b/New folder (2)/commerce.html
@@ -73,7 +73,7 @@
                     <div class="content">
                         <h3>COMMERCE WITH MATHS</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
-                        <a href="#" class="btn">click here</a>
+                        <a href="com_maths.html" class="btn">click here</a>
                     </div>
                 </div>
                 <div class="box">
@@ -84,7 +84,7 @@
                     <div class="content">
                         <h3>COMMERCE WITHOUT MATHS</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
-                        <a href="#" class="btn">click here</a>
+                        <a href="com_no_maths.html" class="btn">click here</a>
                     </div>
                 </div>
                 <div class="box">
@@ -95,7 +95,7 @@
                     <div class="content">
                         <h3>COMMERCE WITH COMPUTER</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
-                        <a href="#" class="btn">click here</a>
+                        <a href="com_computer.html" class="btn">click here</a>
                     </div>
                 </div>
             </div>
