--- a/New folder (2)/contact.html
+++ b/New folder (2)/contact.html
@@ -91,12 +91,13 @@
             </div>
         </div>
         <div class="row">
-            <form action="">
+            <form action="contact.php" method="post">
                 <h3>Send Us A Message.</h3>
-                <input type="text" placeholder="Name" class="box">
-                <input type="email" placeholder="Email" class="box">
-                <input type="number" placeholder="Phone" class="box">
-                <textarea name="" class="box" placeholder="Your Message" id="" cols="30" rows="10"></textarea>
+                <input type="text" placeholder="Name" class="box" name="name">
+                <input type="email" placeholder="Email" class="box" name="email">
+                <input type="number" placeholder="Phone" class="box" name="phone">
+                <textarea name="" class="box" placeholder="Your Message" id="" cols="30" rows="10"
+                    name="message"></textarea>
                 <input type="submit" value="Send Message" class="btn">
             </form>
         </div>
