--- a/New folder (2)/humanities.html
+++ b/New folder (2)/humanities.html
@@ -69,34 +69,34 @@
                 <div class="box">
                     <div class="image">
                         <img src="assets/imgs/MATHS.jpeg" alt="">
-                        <h3>PCM</h3>
+                        <h3>PSYCHOLOGY</h3>
                     </div>
                     <div class="content">
-                        <h3>PHYSICS, CHEMISTRY AND MATHS</h3>
+                        <h3>Humanities with psychology</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
-                        <a href="#" class="btn">click here</a>
+                        <a href="hum_psyco.html" class="btn">click here</a>
                     </div>
                 </div>
                 <div class="box">
                     <div class="image">
                         <img src="assets/imgs/CHEMISTRY.jpg" alt="">
-                        <h3>PCB</h3>
+                        <h3>ECONOMICS</h3>
                     </div>
                     <div class="content">
-                        <h3>PHYSICS, CHEMISTRY AND BIOLOGY</h3>
+                        <h3>Humanities with economics</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
-                        <a href="#" class="btn">click here</a>
+                        <a href="hum_eco.html" class="btn">click here</a>
                     </div>
                 </div>
                 <div class="box">
                     <div class="image">
                         <img src="assets/imgs/BIOLOGY.jpeg" alt="">
-                        <h3>PCMB</h3>
+                        <h3>LEGAL STUDIES</h3>
                     </div>
                     <div class="content">
-                        <h3>PHYSICS, CHEMISTRY, MATHS AND BIOLOGY</h3>
+                        <h3>Humanities with legal studies</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
-                        <a href="#" class="btn">click here</a>
+                        <a href="hum_legal.html" class="btn">click here</a>
                     </div>
                 </div>
             </div>
