updated economics career page
updated economics career page and some other minor changes

--- a/New folder (2)/hum_eco.html
+++ b/New folder (2)/hum_eco.html
@@ -65,7 +65,7 @@
                 <div class="column">
                     <div class=" slide">
                         <div class="image">
-                            <img src="assets/imgs/class9-icon.jpeg" alt="">
+                            <img src="assets/imgs/economic-analysis.jpg" alt="">
                             <h3>Economic Analysis</h3>
                         </div>
                         <div class="content">
@@ -76,7 +76,7 @@
                     </div>
                     <div class=" slide">
                         <div class="image">
-                            <img src="assets/imgs/class9-icon.jpeg" alt="">
+                            <img src="assets/imgs/Finential-planning.jpg" alt="">
                             <h3>Financial Planning</h3>
                         </div>
                         <div class="content">
@@ -87,7 +87,7 @@
                     </div>
                     <div class=" slide">
                         <div class="image">
-                            <img src="assets/imgs/class9-icon.jpeg" alt="">
+                            <img src="assets/imgs/market-research.jpg" alt="">
                             <h3>Market Research</h3>
                         </div>
                         <div class="content">
@@ -98,18 +98,18 @@
                 <div class="column">
                     <div class=" slide">
                         <div class="image">
-                            <img src="assets/imgs/class9-icon.jpeg" alt="">
+                            <img src="assets/imgs/business-staratgy.jpg" alt="">
                             <h3>Business Strategy</h3>
                         </div>
                         <div class="content">
-                            <h3>Business Strategyj</h3>
+                            <h3>Business Strategy</h3>
                             <p></p>
                             <a href="#" class="btn">Explore</a>
                         </div>
                     </div>
                     <div class=" slide">
                         <div class="image">
-                            <img src="assets/imgs/class9-icon.jpeg" alt="">
+                            <img src="assets/imgs/Public-policy-analysis.jpeg" alt="">
                             <h3>Public Policy Analysis</h3>
                         </div>
                         <div class="content">
@@ -120,7 +120,7 @@
                     </div>
                     <div class=" slide">
                         <div class="image">
-                            <img src="assets/imgs/class9-icon.jpeg" alt="">
+                            <img src="assets/imgs/labor-economics.jpg" alt="">
                             <h3>Labor Economics</h3>
                         </div>
                         <div class="content">
@@ -133,7 +133,7 @@
                 <div class="column">
                     <div class=" slide">
                         <div class="image">
-                            <img src="assets/imgs/class9-icon.jpeg" alt="">
+                            <img src="assets/imgs/International-economics.jpg" alt="">
                             <h3>International Economics</h3>
                         </div>
                         <div class="content">
@@ -144,7 +144,7 @@
                     </div>
                     <div class=" slide">
                         <div class="image">
-                            <img src="assets/imgs/class9-icon.jpeg" alt="">
+                            <img src="assets/imgs/Environmental-Economics.jpg" alt="">
                             <h3>Environmental Economics</h3>
                         </div>
                         <div class="content">
@@ -155,7 +155,7 @@
                     </div>
                     <div class=" slide">
                         <div class="image">
-                            <img src="assets/imgs/class9-icon.jpeg" alt="">
+                            <img src="assets/imgs/urban-economics.jpg" alt="">
                             <h3>Urban Economics</h3>
                         </div>
                         <div class="content">
