--- a/New folder (2)/index.html
+++ b/New folder (2)/index.html
@@ -68,7 +68,7 @@
                         <a href="#" class="btn">get started</a>
                     </div>
                 </section>
-                <section class="swiper-slide slide" style="background: url(assets/imgs/home-slide-2.jpg) no-repeat;">
+                <section class="swiper-slide slide" style="background: url(assets/imgs/home-slide-1.jpg) no-repeat;">
                     <div class="content">
                         <h3>You wil find the best mentors here!</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas impedit labore dolore unde,
@@ -76,12 +76,12 @@
                         <a href="mentors.html" class="btn">get started</a>
                     </div>
                 </section>
-                <section class="swiper-slide slide" style="background: url(assets/imgs/home-slide-1.jpg) no-repeat;">
+                <section class="swiper-slide slide" style="background: url(assets/imgs/home-slide-2.jpg) no-repeat;">
                     <div class="content">
-                        <h3>ASK YOUR DOUBTS..ANYTIME!! ANYWHERE!! </h3>
+                        <h3>EXPLORE CAREER IN VARIOUS FIELDS!! </h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas impedit labore dolore unde,
                             quidem corrupti?</p>
-                        <a href="DoubtsPage.html" class="btn">get started</a>
+                        <a href="career.html" class="btn">get started</a>
                     </div>
                 </section>
             </div>
