minor change in index page

--- a/New folder (2)/index.html
+++ b/New folder (2)/index.html
@@ -65,7 +65,7 @@
                     <div class="content">
                         <h3>WE INNOVATE LEARNING PROCESSES- StudentEduTour</h3>
                         <p>LEARN AT YOUR COMFORT OF YOUR OWN HOME</p>
-                        <a href="#" class="btn">get started</a>
+                        <a href="#study-materials" class="btn">get started</a>
                     </div>
                 </section>
                 <section class="swiper-slide slide" style="background: url(assets/imgs/home-slide-1.jpg) no-repeat;">
@@ -90,7 +90,7 @@
     </section>
     <!-- home section ends -->
     <!-- subjects section starts  -->
-    <section class="subjects">
+    <section class="subjects" id="study-materials">
         <h1 class="heading">popular subjects</h1>
         <div class="box-container">
             <div class="box">
